--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="border-bottom header">
-    <nav class="navbar has-shadow is spaced" role="navigation" aria-label="main navigation">
+    <nav class="navbar has-shadow is spaced level" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
   <a class="navbar-item" href="{% url 'list_pets' %}"><h1>{{ agency.name }}</h1></a>
   </div>
