--- a/templates/petrescue/pet_detail.html
+++ b/templates/petrescue/pet_detail.html
@@ -1,49 +1,60 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-<div class="pet-detail card">
-    <img src="{{ pet.photo.url }}"class="pet-photo" alt="photo-of-{{pet.name}}" />
-    <h2 class="card-title">{{ pet.name }}</h2>
-    <div class="card-body">
-        <div class="tags">
-        <ul class="list-inline">
-            <li class="list-inline-item"><span class="tag">{{ pet.sex }}</span></li>
-            <li class="list-inline-item"><span class="tag">{{ pet.age_group }}</span></li>
+
+<div class="tile is-ancestor box">
+    <div class="tile is-8 is-vertical is-parent level">
+        <div class="tile is-child is-vertical level-right"><h1 class="title">{{ pet.name }}</h1></div>
+    <div class="tile is-child is-vertical"><img src="{{ pet.photo.url }}" class="pet-photo" alt="photo-of-{{pet.name}}" /></div>
+    <div class="tile is-child is vertical">
+        <ul class="level">
+            <li class="lit-inline-item"><span class="tag">{{ pet.status }}</span></li>
+            <li class="lit-inline-item"><span class="tag">{{ pet.age_group }}</span></li>
             <li class="list-inline-item"><span class="tag">{{ pet.size }}</span></li>
             {% if pet.heartworm_positive or pet.health_concerns %}<li class="list-inline-item"><span class="tag">Health Issues</span></li>
             {% else %}{% endif %}
             </ul>
           </div>
+          </div>
+
+        <div class="tile is-parent">
+          <div class="tile is-child is-4">
     <dl class="row">
-        <dt>Status</dt>
-        <dd>{{ pet.status }}</dd>
-        <dt>Breed</dt>
-        <dd>{{ pet.breed }}</dd>
-        <dt>Age</dt>
-        <dd>{{ pet.age }}</dd>
-        <dt>Weight</dt>
-        <dd>{{ pet.weight }}</dd>
-        <dt>About {{ pet.name }}</dt>
-        <dd>{{ pet.description }}</dd>
-        <dt>Vaccinations up-to-date</dt>
-        {% if pet.current_on_vac %}<dd>Yes</dd>{% else %}<dd>No</dd>{% endif %}
-        <dt>Spayed/Neutered</dt>
-        {% if pet.spay_neuter %}<dd>Yes</dd>{% else %}<dd>No</dd>{% endif %}
-        <dt>Good with kids</dt>
+        <dt>Age</dt><dd>{{ pet.age }}</dd>
+        <dt>Weight</dt><dd>{{ pet.weight }}</dd>
+        <dt>Sex</dt><dd>{{ pet.sex }}</dd>
+        <dt>Breed</dt><dd>{{ pet.breed }}</dd>
+    </dl>
+    </div>
+</div>
+</div>
+
+<div class="tile is-ancestor box">
+    <div class="tile is-parent is-12 is-vertical">
+        <div class="tile is-child">
+        <h2>Meet {{ pet.name }}</h2>
+        <p>{{ pet.description }}</p>
+        </div></div>
+        <div class="tile is-child is-6">
+        <dl><dt>Good with kids</dt>
         {% if pet.good_with_kids %}<dd>Yes</dd>{% else %}<dd>No</dd>{% endif %}
         <dt>Good with dogs</dt>
         {% if pet.good_with_dogs %}<dd>Yes</dd>{% else %}<dd>No</dd>{% endif %}
         <dt>Good with cats</dt>
         {% if pet.good_with_cats %}<dd>Yes</dd>{% else %}<dd>No</dd>{% endif %}
+        <dt>Vaccinations up-to-date</dt></div>
+        <div class="tile is-child is-6">
+        {% if pet.current_on_vac %}<dd>Yes</dd>{% else %}<dd>No</dd>{% endif %}
+        <dt>Spayed/Neutered</dt>
+        {% if pet.spay_neuter %}<dd>Yes</dd>{% else %}<dd>No</dd>{% endif %}
         <dt>Heartworm positive</dt>
         {% if pet.heartworm_positive %}<dd>Yes</dd>{% else %}<dd>No</dd>{% endif %}
         <dt>Additional health concerns</dt>
         {% if pet.health_concerns %}<dd>Yes</dd>{% else %}<dd>No</dd>{% endif %}
-        <!-- <dt>Time in rescue</dt>
-        <dd>{{ pet.date_created }}</dd> -->
-    </dl>
+        <dt>Time in rescue</dt>
+        <dd>{{ pet.date_created|timeuntil:now }}</dd></dl></div>
     </div>
-</div>
+
 <div id="application-button"><a href="{% url 'application' %}" class="button">Apply to Adopt!</a></div>
 
 {% endblock %}
