--- a/templates/petrescue/app_saved.html
+++ b/templates/petrescue/app_saved.html
@@ -2,4 +2,5 @@
 {% load static %}
 {% block content %}
 <h3>Your application has been successfully submitted!</h3>
+<a href="{% url 'pet_list' %}" >Return to home</a>
 {% endblock %}
