--- a/templates/staff/application_list.html
+++ b/templates/staff/application_list.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
 {% if request.user.is_authenticated %}
-<h1>Review your list of applications below!</h1>
+<p class="lead">Review your list of applications below</p>
 
 <table class="table">
     <thead>
