--- a/templates/staff/pet_detail.html
+++ b/templates/staff/pet_detail.html
@@ -134,6 +134,7 @@
         </div>
       </form>
     </div>
-<h1>Please log in to view this page.</h1>
+    {% else %}
+  <h1>Please <a href="/accounts/login/">login</a> to view this page.</h1>
 {% endif %}
 {% endblock %}
