--- a/templates/staff_base.html
+++ b/templates/staff_base.html
@@ -15,7 +15,7 @@
   <header class="border-bottom header">
     <nav class="navbar has-shadow is-spaced is-info" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-      <a class="navbar-item" href="{% url 'home' %}"><h1>{{ agency.name }}</h1>
+      <a class="navbar-item" href="{% url 'pet_list' %}"><h1>{{ agency.name }}</h1>
       </a>
       <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navMenu">
         <span aria-hidden="true"></span>
@@ -24,7 +24,7 @@
       </a>
     </div>
     <div id="navMenu" class="navbar-menu">
-      <div class="navbar-start">
+      <div class="navbar-start level">
       <a class="navbar-item" href="{% url 'pet_list' %}" >Pets</a>
       <a class="navbar-item" href="{% url 'applications' %}" >Applications</a>
       <a class="navbar-item" href="{% url 'agency' %}" >Rescue info</a>
@@ -43,8 +43,6 @@
   <div class="container">
     {% block content %}{% endblock content %}
   </div>
-  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
-    <h2 class="subtitle">2TheRescue!</h2>
     <script src="{% static 'js/index-bundle.js' %}"></script>
   </body>
 </html>
