--- a/templates/petrescue/application.html
+++ b/templates/petrescue/application.html
@@ -118,14 +118,10 @@
       {{ form.vet_info }}
   </div> 
 </div>
-
-
-
     <div>
-      <button class="button is-info" type="submit">Apply</button>
+      <button class="button">Apply</button>
     </div>
   </form>
 </div>
-
 {% endblock %}
 
