--- a/templates/staff/application_list.html
+++ b/templates/staff/application_list.html
@@ -2,8 +2,8 @@
 {% load static %}
 {% block content %}
 {% if request.user.is_authenticated %}
-<p class="lead">Review your list of applications below</p>
-
+<div class="mt-4"><p class="lead">Review your list of applications below</p>
+</div>
 <table class="table">
     <thead>
       <tr>
