--- a/templates/staff_base.html
+++ b/templates/staff_base.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ agency.name }} 2therescue</title>
+  <title>2therescue</title>
   <link rel="stylesheet" href="{% static 'css/staff.css' %}" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header class="border-bottom header">
-    <nav class="navbar has-shadow is-spaced is-info" role="navigation" aria-label="main navigation">
+    <nav class="navbar has-shadow is-spaced level is-info" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
       <a class="navbar-item" href="{% url 'pet_list' %}"><h1>{{ agency.name }}</h1>
       </a>
@@ -23,8 +23,8 @@
         <span aria-hidden="true"></span>
       </a>
     </div>
-    <div id="navMenu" class="navbar-menu">
-      <div class="navbar-start level">
+    <div class="navbar-menu">
+      <div class="navbar-start">
       <a class="navbar-item" href="{% url 'pet_list' %}" >Pets</a>
       <a class="navbar-item" href="{% url 'applications' %}" >Applications</a>
       <a class="navbar-item" href="{% url 'agency' %}" >Rescue info</a>
@@ -32,7 +32,7 @@
       <div class="navbar-end">
         {% if request.user.is_authenticated %}
       <a class="navbar-item " href="{% url 'list_pets' %}" ><i class="fas fa-glasses white"></i>Preview Site</a>|
-      <a class="navbar-item" href="/accounts/logout/"><i class="fas fa-door-open"></i>og out</a>
+      <a class="navbar-item" href="/accounts/logout/"><i class="fas fa-door-open"></i><span style="color: transparent; font-size: .01px;">L</span>og out</a>
         {% else %}
         <a class="navbar-item" href="/accounts/login/">Login</a>
         {% endif %}
@@ -43,6 +43,7 @@
   <div class="container">
     {% block content %}{% endblock content %}
   </div>
+  <footer class="level"><p class="level-item has-text-centered">Powered by 2TheRescue</p></footer>
     <script src="{% static 'js/index-bundle.js' %}"></script>
   </body>
 </html>
