--- a/static/css/index.css
+++ b/static/css/index.css
@@ -91,7 +91,7 @@ header a {
     word-wrap: normal;
     width: 20rem;    
     margin: .5rem .5rem .75rem .5rem;
-    border: 1px solid #3db39f;
+    border: 2px solid #158bba68;
 }
 
 .card .text {
@@ -119,7 +119,7 @@ header a {
 
 .card a {
     text-decoration: none;
-    color: #3db39f;
+    color: #158CBA;
 }
 
 .card a::after {
